--- a/MidTermNetCore/appsettings.json
+++ b/MidTermNetCore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MidTermNetCore": "Server=.; Database=MidTermNetCore; Integrated,Security=True;"
+    "MidTermNetCore": "Server=.; Database=MidTermNetCore; Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
